=== actuar: An R Package for Actuarial Science ===

Version 1.0-1
=============

BUG FIXES

  o Functions d<foo>() now handle the case x == 0 correctly.

  o Functions q<foo>() now return NaN instead of an error when
    argument p is outside [0, 1] (as in R).

  o The warning message "NaNs produced" was not (and could not be)
    translated.


Version 1.0-0
=============

NEW FEATURES

  o Improved support for regression credibility models. There is now
    an option to make the computations with the intercept at the
    barycenter of time. This assures that the credibility adjusted
    regression line (or plane, or ...) lies between the individual and
    collective ones. In addition, contracts without data are now
    supported like in other credibility models.

  o Argument 'right' for grouped.data() to allow intervals closed on
    the right (default) or on the left.

  o Method of quantile() for grouped data objects to compute the
    inverse of the ogive.

USER-VISIBLE CHANGES

  o cm() no longer returns the values of the unbiased estimators when
    method = "iterative".

  o Specification of regression models in cm() has changed: one should
    now provide the regression model as a formula and the regressors
    in a separate matrix or data frame.

  o Due to above change, predict.cm() now expects 'newdata' to be a
    data frame as for stats:::predict.lm().

  o Function bstraub() is no longer exported. Users are expected to
    use cm() as interface instead.

BUG FIXES

  o Functions r<foo>() are now more consistent in warning when NA's
    (specifically NaN's) are generated (as per the change in R 2.7.0).

  o frequency.portfolio was wrongly counting NAs.

  o Domain of pdfs returned by aggregateDist() now restricted to
    [0, 1].

  o Quantiles are now computed correctly (and more efficiently) in 0
    and 1 by quantile.aggregateDist().

  o coverage() no longer requires a cdf when it is not needed, namely
    when there is no deductible and no limit.